s/xmms\.se/xmms2.org/
Levitation import of page 728 rev 11305.

--- a/0-/Using the application.mediawiki
+++ b/0-/Using the application.mediawiki
@@ -1,7 +1,7 @@
 Please also view the manual pages - if you have the XMMS2 source they're in doc/xmms2.1 and doc/xmms2d.8. They can also be viewed at http://alex.foxybanana.com/manpages.html
 
 '''Notes:'''
-* By default, a small client - ''[[ET | xmms2-et]]'' is installed and set up to be launched whenever ''xmms2d'' is started. The purpose of this client is to send the developers some information about the plugins and versions of XMMS2 being used out there, so that new releases can be planned based on this testing data. You should know that this program does not send any personally identifiable information - if in doubt, check the source code yourself (''[http://git.xmms.se/cgit.cgi/xmms2/xmms2-devel/tree/src/clients/et/xmms2-et.c src/clients/et/xmms2-et.c]''). ''xmms2-et'' does not affect the operation of the XMMS2 daemon in any significant way - you can safely disable it by removing ''~/.config/xmms2/startup.d/xmms2-et-launcher.sh'' (substitute '~/.config/xmms2' as appropriate for your xmms2 configuration directory).
+* By default, a small client - ''[[ET | xmms2-et]]'' is installed and set up to be launched whenever ''xmms2d'' is started. The purpose of this client is to send the developers some information about the plugins and versions of XMMS2 being used out there, so that new releases can be planned based on this testing data. You should know that this program does not send any personally identifiable information - if in doubt, check the source code yourself (''[http://git.xmms2.org/xmms2/xmms2-devel/tree/src/clients/et/xmms2-et.c src/clients/et/xmms2-et.c]''). ''xmms2-et'' does not affect the operation of the XMMS2 daemon in any significant way - you can safely disable it by removing ''~/.config/xmms2/startup.d/xmms2-et-launcher.sh'' (substitute '~/.config/xmms2' as appropriate for your xmms2 configuration directory).
 
 = Quick Start =
 # Start the daemon: <code>xmms2-launcher</code>
