s/xmms\.se/xmms2.org/
Levitation import of page 2373 rev 11308.

--- a/0-/Wiki Refactoring.mediawiki
+++ b/0-/Wiki Refactoring.mediawiki
@@ -51,7 +51,7 @@ That's user-centric.  We can have a second developer-oriented menu underneath, b
 * Roadmap  (link to roadmap page)
 * Bug Tracker  (link to mantis)
 * Documentation  (link to doxygen)
-* Git repository  (link to git.xmms.se)
+* Git repository  (link to git.xmms2.org)
 
 Note: The second level in Dev Corner does not appear in the menu!
 
