s/xmms\.se/xmms2.org/
Levitation import of page 1959 rev 11320.

--- a/3-User talk/Nwily.mediawiki
+++ b/3-User talk/Nwily.mediawiki
@@ -1,10 +1,10 @@
 You know, I'm finding it kind of hard not to take some of your shit personally, especially with your colourful language, like "Hurts the soul like a dead hooker." All it makes me want to do is yell '''''SHUT THE FUCK UP AND GET THE FUCK OUTTA HERE''''', because 1) you're new around here, and 2) I'm the one responsible for a lot of what you're criticising, and no one else seemed to have the sense to correct what I was doing before you got here. On the other hand, looking past the crap language, I can see you seem to make some good points. I suggest you tone down the language if we're going to work together. (Apologising over and over for your 'sarcasm getting away' from you doesn't cut it.)
 
-Regarding [[Design of XMMS2]] and specifically the [[Design of XMMS2#Clients | Clients]] section, I figured that the numerous README files and code examples were self-explanatory and therefore didn't warrant much elaboration on the wiki itself. The bulk of what there is to know about writing XMMS2 clients is explained in the [[Design of XMMS2#Middleware | Middleware]] section, and the rest is in the code examples found in [http://git.xmms.se/?p=xmms2-tutorial.git;a=summary xmms2-tutorial]. If you find more to write about XMMS2 clients, please do. If you want to refactor the Design of XMMS2 page, please go ahead.
+Regarding [[Design of XMMS2]] and specifically the [[Design of XMMS2#Clients | Clients]] section, I figured that the numerous README files and code examples were self-explanatory and therefore didn't warrant much elaboration on the wiki itself. The bulk of what there is to know about writing XMMS2 clients is explained in the [[Design of XMMS2#Middleware | Middleware]] section, and the rest is in the code examples found in [http://git.xmms2.org/xmms2/xmms2-tutorial/ xmms2-tutorial]. If you find more to write about XMMS2 clients, please do. If you want to refactor the Design of XMMS2 page, please go ahead.
 
 Got an idea for a better main page? Prototype it on a wiki page and let us see it.
 
-You're right about the [[Mobile platforms]] page, I did think "gee-whiz, it would be nice" when I created the page - I figured something like a stub might be useful, say, to start discussion about the subject. Unfortunately, there hasn't been much interest in the XMMS2 community about supporting mobile devices. For the record, there is at least one client named 'Blue' written by Jens Taprogge meant to run on a mobile phone. It's available in an obscure branch of his Git repository: http://git.xmms.se/?p=xmms2-jlt.git;a=shortlog;h=blue In anticipation of you asking "Well, why isn't this information on the [[Mobile platforms]] page?", may I suggest that you do what you think is right in correcting this, instead of posting more inflammatory questions.
+You're right about the [[Mobile platforms]] page, I did think "gee-whiz, it would be nice" when I created the page - I figured something like a stub might be useful, say, to start discussion about the subject. Unfortunately, there hasn't been much interest in the XMMS2 community about supporting mobile devices. For the record, there is at least one client named 'Blue' written by Jens Taprogge meant to run on a mobile phone. It's available in an obscure branch of his Git repository: https://github.com/XMMS2/xmms2-alumni/tree/jlt-blue In anticipation of you asking "Well, why isn't this information on the [[Mobile platforms]] page?", may I suggest that you do what you think is right in correcting this, instead of posting more inflammatory questions.
 
 The [[Project Status]] page is indeed deprecated. I found that manually maintaining it was quite a chore - I haven't found a way of automating the process. I'm guessing that prerequisites to this would be:
 # Defining once and for all, the different components that make up XMMS2
